<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lcars_editor2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        android:text="@string/starship_type" />

    <Spinner
        android:id="@+id/spinner_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@+id/edit_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:text="@string/price" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
        app:layout_constraintEnd_toEndOf="@+id/edit_phone"
        app:layout_constraintStart_toStartOf="@+id/edit_supplier"
        tools:text="£58 million" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        android:text="@string/quantity" />

    <Button
        android:id="@+id/minus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/button_bg_round"
        android:text="@string/_1"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_quantity"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:background="@drawable/button_bg_round"
        android:text="@string/__1"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_quantity"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/required"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/plus"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/plus" />

    <TextView
        android:id="@+id/tv_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/supplier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quantity" />

    <EditText
        android:id="@+id/edit_supplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_supplier"
        app:layout_constraintEnd_toStartOf="@+id/ib_phone"
        app:layout_constraintStart_toEndOf="@+id/tv_supplier"
        tools:text="Name" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_supplier" />

    <ImageButton
        android:id="@+id/ib_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_phone"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="11"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_phone"
        app:layout_constraintEnd_toStartOf="@+id/ib_phone"
        app:layout_constraintStart_toStartOf="@+id/edit_supplier"
        tools:text="Phone" />


</android.support.constraint.ConstraintLayout>